# csort

./: .csortconfig  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.c  config.h  config.lua  core.c  core.h  csort.c  csort.h  example-python.py  main.c  my.py
test/: check.c  check.h  test.c
